# Forge

./: .env.example  .gitignore  PROJECT_STATUS.md  README.md  TECH_SPEC.md  TESTING_NOTES.md  build-local.ps1  package.json
.github/workflows/: build-windows.yml
backend/: README.md  build.spec  profile_memory.py  pyproject.toml  run.py  upload_all.py
backend/scripts/: seed_meetings.py
backend/src/: main.py  resolution_store.py
backend/src/graph/: db.py  extract.py  queries.py
backend/src/llm/: agent.py  client.py  prompts.py  tools.py  workflow.py
backend/src/models/: meeting.py  project.py  session.py
backend/src/parsers/: __init__.py  chm.py  docx.py  ocr.py  pdf.py
backend/src/rag/: __init__.py  bundled_models.py  embeddings.py  reranker.py  scoring.py  vector_store.py
backend/src/routers/: config.py  documents.py  meetings.py  projects.py  sessions.py
backend/src/services/: chm_service.py  doc_worker.py  document_service.py  import_worker.py  json_store.py  meeting_service.py  memo_service.py  resolution_service.py
backend/src/utils/: __init__.py  llm_config.py  paths.py
backend/tests/: conftest.py  test_api.py  test_chm_service.py  test_json_store.py  test_meeting_service.py  test_resolution_service.py
docs/: meeting-notes-design.md
docs/api-guide/: index.html
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: DocumentList.tsx  ImportMeetingModal.tsx  MarkdownContent.css  MarkdownContent.tsx  MeetingDetail.tsx  MeetingList.tsx  ProjectSelector.tsx  ResolutionCard.tsx  UploadArea.tsx
frontend/src/hooks/: useProjects.ts
frontend/src/views/: ChatView.css  ChatView.tsx  ConfigView.css  ConfigView.tsx  (+4 more)
packaging/: engineering-assistant.spec
scripts/: vm-setup.bat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+1 files in other folders)
