[project]
name = "engineer-assistant-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "llama-index>=0.10.0",
    "llama-index-workflows>=0.1.0",
    "lancedb>=0.8.0",
    "pymupdf>=1.24.0",
    "rapidocr-onnxruntime>=1.3.0",
    "langchain-text-splitters>=0.3.0",
    "fastembed>=0.2.0",
    "keyring>=24.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.6",
    "pyinstaller>=6.19.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
