[package]
name = "engineer-assistant"
version = "0.1.7"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"

[features]
console = []
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
