[package]
name = "engineer-assistant"
version = "0.1.9"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"  # still used by backend TMPDIR fallback if needed later

[features]
console = []
default = ["custom-protocol", "console"]
custom-protocol = ["tauri/custom-protocol"]
